# clinica-medica

./: db.sqlite3  pyproject.toml
clinica/: admin.py  models.py  serializers.py  views.py
clinica/migrations/: 0001_initial.py
config/: settings.py  urls.py
