[project]
name = "clinica-medica"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thaynabecker", email = "thaynabecker.ifcaraquari"},
]
dependencies = ["django>=5.2.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
